--- a/back/package.json
+++ b/back/package.json
@@ -14,8 +14,11 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
